--- a/styles/styles.css
+++ b/styles/styles.css
@@ -24,11 +24,11 @@
 }
 
 body {
-  color: var(--main-color);
-
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   letter-spacing: 0.03em;
+
+  color: var(--main-color);
 
   background-color: var(--main-background-color);
 }
@@ -38,10 +38,17 @@ body {
 .header {
   border-bottom: 1px solid var(--border-color);
 }
-.header .current {
-  border-bottom: 5px solid var(--active-link-color);
-  /* width: 48px;
-  height: 4px; */
+.nav-item .current::after {
+  content: '';
+
+  display: block;
+  position: absolute;
+
+  width: 100%;
+
+  bottom: -2px;
+
+  border-bottom: 4px solid var(--active-link-color);
   border-radius: 2px;
 }
 
@@ -50,17 +57,21 @@ body {
   align-items: center;
 }
 
+.nav-item {
+  padding: 32px 0;
+}
+
 .header-logo {
+  font-family: var(--logo-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+
   margin-right: 93px;
   padding-top: 24px;
   padding-bottom: 25px;
 
   color: var(--logo-color);
-
-  font-family: var(--logo-font);
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
 }
 
 .header-logo > span {
@@ -86,16 +97,10 @@ body {
   justify-content: center;
   gap: 10px;
   color: var(--text-color);
-
-  transition: color 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-contact-icon {
   fill: currentColor;
-
-  transition: fill 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .container-contacts {
@@ -107,6 +112,7 @@ body {
 
 .nav-link,
 .contact-link {
+  position: relative;
   padding: 32px 0;
 
   color: var(--main-color);
@@ -207,10 +213,11 @@ body {
 }
 
 .features-icon {
-  height: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
+  
+  height: 120px;
 
   background-color: var(--team-background-color);
   border-radius: 4px;
@@ -230,14 +237,34 @@ body {
 .gallery.section {
   padding-top: 0;
 }
+
 .gallery-list {
   display: flex;
   gap: 30px;
 }
+
+.gallery-item {
+  position: relative;
+}
+
+.label {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 27px 0;
+
+  font-weight: 700;
+
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+
+  color: #ffffff;
+  background-color: rgba(47, 48, 58, 0.8);
+}
 /*---------team------------*/
 .team {
-  background-color: var(--team-background-color);
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+  background-color: var(--team-background-color);/* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
 }
 
 .team-item {
@@ -280,10 +307,12 @@ body {
   justify-content: center;
   gap: 10px;
 }
+
 .team-soc-item {
   width: 44px;
   height: 44px;
 }
+
 .team-soc-link,
 .clients-link,
 .footer-soc-link {
@@ -293,11 +322,12 @@ body {
 
   width: 100%;
   height: 100%;
+
   border-radius: 50%;
 
   fill: var(--icon-fill);
 
-  transition: 250ms linear;
+  transition: fill 250ms linear;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -305,6 +335,9 @@ body {
 .team-soc-link:focus {
   background-color: var(--active-btn-background-color);
   fill: var(--active-btn-color);
+
+  transition: background-color 250ms linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ----------------clients------------------- */
@@ -326,18 +359,17 @@ body {
   border-radius: 4px;
 
   color: var(--icon-fill);
-  /* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+ 
+  transition: border-color 250ms linear, color 250ms linear;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-icon {
   fill: currentColor;
-  transition: 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
 .clients-link:focus {
-  /* background-color: var(--active-icon-background-color); */
   border-color: var(--active-link-color);
   color: var(--active-link-color);
 }
@@ -524,6 +556,42 @@ body {
   flex-basis: calc(100% / 3 - var(--gap));
 }
 
+.box {
+  position: relative;
+  overflow: hidden;
+  
+  width: 370px;
+  height: 294px;
+}
+
+.box:hover .overlay {
+  transform: translateX(0);
+}
+
+.overlay {
+  position: absolute;
+  padding: 63px 24px;
+
+  top: 0;
+  left: 0;
+  
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translatey(100%);
+  transition: transform 250ms ease;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.box-content {
+  font-size: 18px;
+  line-height: 1.56;
+
+  color: #ffffff;
+}
+
 .cards-content {
   padding: 20px 24px;
 
@@ -538,8 +606,71 @@ body {
   line-height: 1.88;
 }
 
+/* --------------------modal---------------- */
+
 .backdrop {
   position: fixed;
+
   top: 0;
   left: 0;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.2);
+
+  transition: opacity 250ms linear, visibility 250ms linear;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.modal {
+  position: absolute;
+
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 528px;
+  min-height: 581px;
+
+  background-color: var(--main-background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  transform: translate(-50%, -50%) scaley(1);
+  transition: transform 250ms linear;
+  
+}
+
+.backdrop.is-hidden .modal {
+transform: translate(-50%, -50%) scaley(0);
+transition: transform 250ms linear;
+}
+
+.modal-btn {
+  position: absolute;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 0;
+
+  top: 8px;
+  right: 8px;
+
+  width: 30px;
+  height: 30px;
+
+  background-color: var(--hero-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
 }
