--- a/styles/styles.css
+++ b/styles/styles.css
@@ -121,16 +121,11 @@ body {
   line-height: 1.33;
   letter-spacing: 0.02em;
 
-  transition: color 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .current {
   color: var(--active-link-color);
-}
-
-.contact-link {
-  color: var(--text-color);
 }
 
 /*--------------hero---------------*/
@@ -169,29 +164,33 @@ body {
 .hero-btn {
   margin: 0 auto;
 
-  border-radius: 4px;
-  border: none;
-
   min-width: 216px;
   height: 50px;
-
-  color: var(--hero-color);
 
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
 
-  background-color: var(--active-btn-background-color);
+  border-radius: 4px;
+  border: none;
 
-  transition: 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--hero-color);
+  background-color: var(--active-btn-background-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.hero-btn:hover,
+.hero-btn:focus,
 .hero-btn:active {
   background-color: var(--hero-btn-activ-background-color);
 }
+
 /*-----------Features--------------*/
+
 .features-title {
   margin-bottom: 10px;
   margin-top: 30px;
@@ -201,6 +200,7 @@ body {
 
   text-transform: uppercase;
 }
+
 .features-list,
 .team-list {
   display: flex;
@@ -216,7 +216,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
   height: 120px;
 
   background-color: var(--team-background-color);
@@ -229,11 +229,13 @@ body {
 }
 
 .features-text {
-  color: var(--text-color);
-
   line-height: 1.71;
+
+  color: var(--text-color);
 }
+
 /*-----------gallery------------*/
+
 .gallery.section {
   padding-top: 0;
 }
@@ -250,6 +252,7 @@ body {
 .label {
   position: absolute;
   bottom: 0;
+
   width: 100%;
   padding: 27px 0;
 
@@ -262,9 +265,11 @@ body {
   color: #ffffff;
   background-color: rgba(47, 48, 58, 0.8);
 }
+
 /*---------team------------*/
+
 .team {
-  background-color: var(--team-background-color);/* box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
+  background-color: var(--team-background-color);
 }
 
 .team-item {
@@ -293,10 +298,10 @@ body {
   text-align: center;
   margin-bottom: 16px;
 
-  color: var(--text-color);
-
   font-size: 16px;
   line-height: 1.18;
+
+  color: var(--text-color);
 }
 
 .team-soc-list,
@@ -325,19 +330,20 @@ body {
 
   border-radius: 50%;
 
-  fill: var(--icon-fill);
+  color: var(--icon-fill);
 
-  transition: fill 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.team-soc-icon {
+  fill: currentColor;
 }
 
 .team-soc-link:hover,
 .team-soc-link:focus {
+  color: var(--active-btn-color);
   background-color: var(--active-btn-background-color);
-  fill: var(--active-btn-color);
-
-  transition: background-color 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* ----------------clients------------------- */
@@ -359,19 +365,20 @@ body {
   border-radius: 4px;
 
   color: var(--icon-fill);
- 
-  transition: border-color 250ms linear, color 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-icon {
+.clients-icon,
+.footer-soc-icon {
   fill: currentColor;
 }
 
 .clients-link:hover,
 .clients-link:focus {
-  border-color: var(--active-link-color);
   color: var(--active-link-color);
+  border-color: var(--active-link-color);
 }
 
 /*------------footer----------*/
@@ -412,13 +419,12 @@ body {
 }
 
 .footer-contacts {
-  color: rgba(255, 255, 255, 0.6);
-
   font-style: normal;
   line-height: 1.71;
 
-  transition: 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  color: rgba(255, 255, 255, 0.6);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .address {
@@ -454,11 +460,11 @@ body {
 .footer-soc-link {
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.1);
-  fill: var(--footer-icon-fill);
 
-  transition: background-color 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  color: var(--footer-icon-fill);
+  background-color: rgba(255, 255, 255, 0.1);
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-soc-link:hover,
@@ -501,8 +507,9 @@ body {
 
   cursor: pointer;
 
-  transition: 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
@@ -511,9 +518,6 @@ body {
   color: var(--active-btn-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-
-  transition: box-shadow 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link {
@@ -521,15 +525,14 @@ body {
   margin: 0;
 
   text-decoration: none;
+
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-link:hover,
 .portfolio-link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-
-  transition: box-shadow 250ms linear;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-cards-list {
@@ -561,7 +564,7 @@ body {
 .box {
   position: relative;
   overflow: hidden;
-  
+
   width: 370px;
   height: 294px;
 }
@@ -576,15 +579,14 @@ body {
 
   top: 0;
   left: 0;
-  
+
   width: 100%;
   height: 100%;
 
   background-color: rgba(33, 150, 243, 0.9);
 
   transform: translatey(100%);
-  transition: transform 250ms ease;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .box-content {
@@ -597,9 +599,7 @@ body {
 .cards-content {
   padding: 20px 24px;
 
-  border-left: 1px solid #eeeeee;
-  border-bottom: 1px solid #eeeeee;
-  border-right: 1px solid #eeeeee;
+  border: 0, 1px solid #eeeeee, 1px solid #eeeeee, 1px solid #eeeeee;
 }
 
 .portfolio-cards-text {
@@ -621,8 +621,8 @@ body {
 
   background-color: rgba(0, 0, 0, 0.2);
 
-  transition: opacity 250ms linear, visibility 250ms linear;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -647,13 +647,12 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
 
   transform: translate(-50%, -50%) scaley(1);
-  transition: transform 250ms linear;
-  
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden .modal {
-transform: translate(-50%, -50%) scaley(0);
-transition: transform 250ms linear;
+  transform: translate(-50%, -50%) scaley(0);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn {
@@ -674,5 +673,6 @@ transition: transform 250ms linear;
   background-color: var(--hero-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+
   cursor: pointer;
 }
